[gd_scene format=3 uid="uid://b58li8axinbnk"]

[ext_resource type="Script" uid="uid://3gem1ll2t7lh" path="res://Scripts/UI/ItemPopup.gd" id="1_popup"]

[node name="ItemPopup" type="CanvasLayer" unique_id=1109812787]
layer = 10
script = ExtResource("1_popup")

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=824237682]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -335.0
offset_top = -268.0
offset_right = 305.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer" unique_id=1822431130]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer" unique_id=2023524408]
layout_mode = 2
theme_override_constants/separation = 4

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer/VBoxContainer" unique_id=794941448]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer/MarginContainer" unique_id=1449727241]
layout_mode = 2
theme_override_constants/separation = 4

[node name="NameLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer" unique_id=1834328639]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Item Name"
horizontal_alignment = 1

[node name="DescLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer" unique_id=1472050383]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Item description goes here"
horizontal_alignment = 1
